# hebrewcard

./: CMakeLists.txt  README.md  hebrewcard.cpp
